Added Design DSL

--- a/bericht.bib
+++ b/bericht.bib
@@ -14,3 +14,11 @@
 	url = {http://www.oracle.com/technetwork/articles/java/javareflection-1536171.html},
 	urldate = {2017-09-04}
 }
+
+@online{parameterCount,
+	author = {Rober C. Martin},
+	title = {Robert C. Martin's Clean Code Tip of the Week \#10: Avoid Too Many Arguments},
+	year = 2009,
+	url = {http://www.informit.com/articles/article.aspx?p=1375308},
+	urldate = {2019-02-21}
+}
