--- a/bericht.tex
+++ b/bericht.tex
@@ -91,6 +91,7 @@ TODO
 \input{kapitel/kapitel3}
 \input{kapitel/kapitel4}
 \input{kapitel/kapitel5}
+\input{kapitel/kapitel6}
 
 \glsaddall
 \printglossary[title=Glossar,toctitle=Glossar]
