--- a/kapitel/kapitel2.tex
+++ b/kapitel/kapitel2.tex
@@ -21,14 +21,13 @@ Die gängigsten Frameworks sind in \tab{tab:Frameworks} gelistet.
 \begin{description}
 	\item{\textbf{Compiler}}\newline{Übersetzt von einer höheren Sprache in eine niedrigere Sprache.}
 	\item{\textbf{Transpiler}}\newline{Übersetzt zwischen zwei Sprachen mit ungefähr gleichem Abstraktionsgrad.}
-	\item{\textbf{Interpreter}}\newline{Führt Code einer höheren Sprache direkt aus.}
+	\item{\textbf{Interpreter}}\newline{Führt Code einer höheren Sprache direkt aus ohne den Code in eine andere Sprache zu übersetzen.}
 \end{description}
 
 \section{ND4J}
 ND4J ist eine Framework für die Sprache Java, in welchem effiziente Matrizenoperationen durchgeführt werden können.
 Es kann auf der \ac{CPU} oder \ac{GPU} ausgeführt werden.
-In ND4J ist größtenteils nur das Konstrukt einer Matrix bekannt, Vektoren sind nur ein Spezialfall einer Matrix.
-
+In ND4J ist größtenteils nur das Konstrukt einer Matrix bekannt, Vektoren oder Skalare sind nur ein Spezialfall einer Matrix.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \endinput
