--- a/kapitel/kapitel3.tex
+++ b/kapitel/kapitel3.tex
@@ -3,7 +3,7 @@
 In dem Umfeld der Arbeit hat sich das Framework ND4J in der Programmiersprache Java für den Praxiseinsatz durchgesetzt.
 Daher soll die in dieser Arbeit entwickelte \ac{DSL} auf diesem Framework aufbauen.
 
-\section{Compiler oder Interpreter?}
+\section{Compiler und Interpreter}
 Die \ac{DSL} ist für das Vorprozessieren von Daten für maschinelles Lernen.
 Für die \ac{DSL} kommt ein Compiler oder Interpreter in Frage.
 Ein Transpiler ist nicht möglich, da es keine in der Praxis verwendete Sprache für das Vorprozessieren der Daten gibt, in die übersetzt werden kann.
