--- a/abk.tex
+++ b/abk.tex
@@ -6,15 +6,11 @@
 
 % Hier werden die Abkürzungen definiert
 \begin{acronym}[DHBW]
-  % \acro{Name}{Darstellung der Abkürzung}{Langform der Abkürzung}
-  \acro{DSL}{Domain-specific language}
-  \acro{JVM}{Java virtual machine}
-  \acro{CPU}{Central processing unit}
-  \acro{GPU}{Graphics processing unit}
-  
-  \acro{PDF}{Portable Document Format}
-  \acro{DTO}{Data transfer object}
-  \acrodefplural{DTO}{Data transfer objects}
-  
-\end{acronym}
+% \acro{Name}{Darstellung der Abkürzung}{Langform der Abkürzung}
+\acro{AST}{Abstract Sytax Tree}
+\acro{CPU}{Central processing unit}
+\acro{DSL}{Domain-specific language}
+\acro{GPU}{Graphics processing unit}
+\acro{JVM}{Java virtual machine}
 
+\end{acronym}
