--- a/bericht.bib
+++ b/bericht.bib
@@ -22,3 +22,19 @@
 	url = {http://www.informit.com/articles/article.aspx?p=1375308},
 	urldate = {2019-02-21}
 }
+
+@online{netbeansSyntax,
+	author = {unbekannt},
+	title = {New Language Support Tutorial Antlr},
+	year = 2009,
+	url = {http://wiki.netbeans.org/New_Language_Support_Tutorial_Antlr},
+	urldate = {2019-03-07}
+}
+
+@online{netbeansSyntaxNotes,
+	author = {Joe Areeda},
+	title = {Antlr Notes},
+	year = 2009,
+	url = {http://wiki.netbeans.org/Antlr_Notes},
+	urldate = {2019-03-07}
+}
