Added due date on title page

--- a/bericht.tex
+++ b/bericht.tex
@@ -47,8 +47,8 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \newcommand{\Titel}{Entwicklung einer DSL zum Rechnen mit mathematischen Formeln für Anwendungen im Maschinellem Lernen}
-\newcommand{\AbgabeDatum}{XX.XX.20XX}
-\newcommand{\Dauer}{XX Wochen}
+\newcommand{\AbgabeDatum}{20.05.2019}
+\newcommand{\Dauer}{5 + 6 Semster}
 \newcommand{\Abschluss}{Bachelor of Science}
 \newcommand{\Studiengang}{Angewandte Informatik}
 
