--- a/titelseite.tex
+++ b/titelseite.tex
@@ -22,7 +22,7 @@
 		Ausbildungsfirma	         & \FirmenName			\\
 		& \FirmenStadt			\\
 		Betreuer & Oliver Rettig		\\
-		& Marcus Strand \\ % Temporär
+		%& Marcus Strand \\ % Temporär
 		%Gutachter der Studienakademie	 & \BetreuerDHBW		\\
 	\end{tabular}
 \end{titlepage}
