Added section for debugging

--- a/bericht.bib
+++ b/bericht.bib
@@ -38,3 +38,11 @@
 	url = {http://wiki.netbeans.org/Antlr_Notes},
 	urldate = {2019-03-07}
 }
+
+@online{netbeansDebugger,
+	author = {Andreas Stefik},
+	title = {New Language Support Tutorial Antlr},
+	year = 2010,
+	url = {https://dzone.com/articles/how-reuse-netbeans-debugger},
+	urldate = {2019-03-13}
+}
